--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar color="primary">
-    <span routerLink="/home">Pokemon App</span>
+    <span routerLink="/isessiorubio">Pokemon App</span>
 </mat-toolbar>
