Score saved but not shown until page reload

--- a/src/app/game/pages/game/game.component.html
+++ b/src/app/game/pages/game/game.component.html
@@ -1,3 +1,4 @@
+<script src="../../services/player.service.ts"></script>
 <ng-container *ngIf="loaded; else Loading">
 
     <div fxLayout="row" fxLayoutAlign="space-around">
