--- a/src/app/information/pages/scores/scores.component.html
+++ b/src/app/information/pages/scores/scores.component.html
@@ -1,1 +1,4 @@
-<p>scores works!</p>
+<div *ngFor="let scores of this.informationModule.scoresSaved">
+  <p>Jugador: {{scores.player}}, Puntuació: {{scores.score}}</p>
+</div>
+
